# muntjac

./: BUILD.bazel  COMBINATORIAL_LOOP_ANALYSIS.md  core_rtl.bzl  python-requirements.txt
flows/: link.ld  muntjac_core_tb.core  muntjac_pipeline_tb.core
flows/verilator/rtl/: core_wrapper.sv  pipeline_wrapper.sv
flows/verilator/src/: binary_parser.cc  binary_parser.h  simulation.h
ip/core/: muntjac_core.core
ip/core/rtl/: muntjac_dcache.sv  muntjac_icache.sv  muntjac_icache_coherent.sv  muntjac_llc.sv
ip/pipeline/: muntjac_pipeline.core
ip/pipeline/rtl/: muntjac_backend.sv  muntjac_frontend.sv
ip/tl/rtl/: tl_socket_1n.sv
