load("//build/fusesoc:rules.bzl", "fusesoc_run")

exports_files(["**/*"])

exports_files(["BUILD.bazel"])

filegroup(
    name = "allfiles",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)

fusesoc_run(
    name = "muntjac_core_fusesoc",
    cores_root = ":BUILD.bazel",
    output_groups = {
        "executables": [
            "muntjac_core",
        ],
    },
    systems = ["lowrisc:muntjac:core_tb:0.1"],
    target = "sim",
    tool = "verilator",
)

filegroup(
    name = "muntjac_core",
    srcs = [":muntjac_core_fusesoc"],
    output_group = "executables",
    visibility = ["//visibility:public"],
)
